style.css
/*import font*/
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

/*define custom variables*/
:root{
    /* 1 Bit Monitor Glow Palette by Polyducks https://lospec.com/palette-list/1bit-monitor-glow */
    --col01: #222323;
    --col02: #f0f6f0;
    --shadow: #dce2dc;
    /* Late Night Bath Palette by sukinapan https://lospec.com/palette-list/late-night-bath */
    --col03: #ffc4b8;
    --col04: #5b5d70;
    --col05: #74838c;
    --col06: #f69197;
    --border: solid 0.125rem var(--col01);
}

/*reorder colours for dark mode*/
@media (prefers-color-scheme: dark) {
    :root{
        /* 1 Bit Monitor Glow Palette by Polyducks https://lospec.com/palette-list/1bit-monitor-glow */
        --col01: #f0f6f0;
        --col02: #222323;
        --shadow: #0e0f0f;
        /* Late Night Bath Palette by sukinapan https://lospec.com/palette-list/late-night-bath */
        --col03: #f69197;
        --col04: #74838c;
        --col05: #5b5d70;
        --col06: #ffc4b8;
        --border: solid 0.125rem var(--col01);
    }
}

body {
    font-family: "Work Sans", serif;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    background-color: var(--col02);
    color: var(--col01);
    line-height: 1.5;
}

main {
    max-width: 1280px;
    background-color: var(--col02);
    padding: 1rem;
    gap: 1rem;
    flex: 1;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: min-content auto auto;
}

section {
    padding: 1rem;
    border: var(--border);
    border-color: var(--col05);
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    /*generated using https://neumorphism.io*/
    box-shadow: inset 0.2rem 0.2rem 0.4rem var(--shadow);
}

label{
    display: flex;
    gap: 1rem;
}

.componentBox {
    border: var(--border);
    border-color: var(--col04);
    border-radius: 1rem;
    padding: 1rem;
    /*generated using https://neumorphism.io*/
    box-shadow:  0.2rem 0.2rem 0.4rem var(--shadow);
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

/**
Dialogs
**/
dialog[open] {
    margin: auto;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    background-color: var(--col02);
    color: var(--col01);
    border: var(--border);
    font-size: 1.5rem;
}
dialog::backdrop {
    background-color: #222323cc;
}
.dialogButton {
    background-color: var(--col01);
    color: var(--col02);
    padding: 0.25rem 0.75rem;
    border: var(--border);
    font-size: 1.5rem;
}
.dialogButton:hover {
    background-color: var(--col02);
    color: var(--col01);
}

/**
Info Section
**/
.infoSection {
    border: none;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    box-shadow: none;
}

h1 {
    color: var(--col02);
    /*
    Source - https://stackoverflow.com/a/23981970
    Posted by ancestral, modified by community. See post 'Timeline' for change history
    Retrieved 2026-07-10, License - CC BY-SA 3.0
    */
    -webkit-text-stroke: 0.0625rem var(--col01);
}

#info-button {
    background-color: var(--col01);
    color: var(--col02);
    padding: 0.25rem 0.75rem;
    border: var(--border);
    border-radius: 0.25rem;
    font-size: 1.5rem;
}
#info-button:hover {
    background-color: var(--col02);
    color: var(--col01);
}

/**
Output Section
**/
.outputHeadingFeedback {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
#volume-feedback{
    width: 2rem;
    height: 2rem;
    border-radius: 1rem;
    border: double 0.25rem var(--col05);
    background-color: var(--col04);
    background-clip: padding-box;
    /*generated using https://neumorphism.io*/
    box-shadow:  0.2rem 0.2rem 0.4rem var(--shadow);
}
/*this holds slider and the values*/
.volumeSliderBox {
    display: flex;
    gap: 1rem;
    justify-content: space-between;
    input[type="range"] {
        flex: 1;
    }
}
/**
Timbre Section
**/
.timbreSection {
    display: flex;
    flex-direction: column;
    align-self: end;
}
.timbreBox {
    display: flex;
    gap: 1rem;
}
.filterBox {
    flex: 1;
}
.filterSliderGrid {
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: auto 5ch min-content;
    gap: 1rem;
    span {
        /*need to use monospace to handle different values changing the spacing*/
        font-variant-numeric: tabular-nums;
        text-align: right;
    }
}

/**
Envelope Section
**/
.envelopeSliderGrid {
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: auto 5ch min-content;
    gap: 1rem;
    span {
        /*need to use monospace to handle different values changing the spacing*/
        font-variant-numeric: tabular-nums;
        text-align: right;
    }
}
.adsrBox{
    width: 100%;
    aspect-ratio: 4/1;
    border: var(--border);
    border-color: var(--col05);
    border-radius: 1rem;
    padding: 0.25rem 1rem;
}


/**
Keyboard Section
**/
.keyboardSection {
    border: none;
    grid-column: 1/3;
    box-shadow: none;
}
/*most of style is in keyboardController.css but some more custom bits live here*/
.blackKey {
    /*generated using https://neumorphism.io*/
    box-shadow:  0.2rem 0.2rem 0.4rem var(--shadow);
}
.whiteKey {
    box-shadow: inset 0.2rem 0.2rem 0.4rem var(--shadow);
}

/**
Input Elements
**/
/*Range Input*/
/*css from: https://range-input-css.netlify.app/*/

/*********** Baseline, reset styles ***********/
input[type="range"] {
    -webkit-appearance: none;
    appearance: none;
    background: transparent;
    cursor: pointer;
    /*width: 20rem;*/
}

/* Removes default focus */
input[type="range"]:focus {
    outline: none;
}

/******** Chrome, Safari, Opera and Edge Chromium styles ********/
/* slider track */
input[type="range"]::-webkit-slider-runnable-track {
    background-color: var(--col01);
    border-radius: 0.5rem;
    height: 0.25rem;
}

/* slider thumb */
input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    margin-top: -0.375rem; /* Centers thumb on the track */
    /*background-color: #808080;*/
    background: linear-gradient(to left, var(--col01) -50%, var(--col02) 30% 70%, var(--col01) 150%);
    border: var(--col01) solid 0.0625rem;
    border-radius: 0.5rem;
    height: 1rem;
    width: 2rem;
}

input[type="range"]:focus::-webkit-slider-thumb {
    background: linear-gradient(to left, var(--col05) -5%, var(--col03) 40% 60%, var(--col05) 105%);
    outline: 0.1rem solid var(--col03);
    outline-offset: 0.125rem;
}

/*********** Firefox styles ***********/
/* slider track */
input[type="range"]::-moz-range-track {
    background-color: var(--col01);
    border-radius: 0.5rem;
    height: 0.25rem;
}

/* slider thumb */
input[type="range"]::-moz-range-thumb {
    /*background-color: #808080;*/
    background: linear-gradient(to left, var(--col01) -50%, var(--col02) 30% 70%, var(--col01) 150%);
    /*border: none; !*Removes extra border that FF applies*!*/
    border: var(--col01) solid 0.0625rem;
    border-radius: 0.5rem;
    height: 1rem;
    width: 2rem;
}

input[type="range"]:focus::-moz-range-thumb{
    background: linear-gradient(to left, var(--col05) -5%, var(--col03) 40% 60%, var(--col05) 105%);
    outline: 0.1rem solid var(--col03);
    outline-offset: 0.125rem;
}

/* Radio Input */
/*CSS from: https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/radio*/
input[type="radio"] {
    appearance: none;
    border-radius: 50%;
    width: 1rem;
    height: 1rem;
    border: var(--border);
    border-color: var(--col05);
    transition: 0.2s all linear;
    position: relative;
    top: 0.25rem;
    cursor: pointer;
}
input[type="radio"]:checked {
    border-color: var(--col01);
    border-width: 0.4rem;
}
label:has(> input[type="radio"]) {
    cursor: pointer;
}

/* Select Input */
select {
    background-color: var(--col01);
    color: var(--col02);
    border: var(--border);
    padding: 0 0.5rem;
}

